--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,10 @@ android {
     buildFeatures {
         viewBinding = true
     }
+
+    dataBinding {
+        enabled true
+    }
 }
 
 dependencies {
