--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MedicineApp">
         <activity
+            android:name=".cart.EnterPatientDetails"
+            android:exported="false" />
+        <activity
+            android:name=".cart.PatientDetailsActivity"
+            android:exported="false" />
+        <activity
             android:name=".cart.order"
             android:exported="false" />
         <activity
